# Project-ResNet-BK-An-O-N-Language-Model-Architecture

./: .editorconfig  .gitattributes  .gitignore  .muse_config  .pre-commit-config.yaml  .readthedocs.yml  .secrets.baseline  AGENTS.md  BK-MoE_Ultra_v2_Stable.py.py  C4_BENCHMARK_QUICK_REFERENCE.md  CHANGELOG.md  COLAB_QUICK_START.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_COMPLETE.md  Dockerfile  EXPERIMENTAL_VALIDATION_PLAN.md  FLOPS_COUNTER_QUICK_REFERENCE.md  GIT_COMMANDS.md  IMPLEMENTATION_STATUS.md  KOOPMAN_WEIGHT_RECOMMENDATION.md  LICENSE  LOCAL_TRAINING_GUIDE.md  MAGNITUDE_PRUNING_IMPLEMENTATION.md  Makefile  PENN_TREEBANK_BENCHMARK_QUICK_REFERENCE.md  PERFORMANCE.md  PHASE2_COMPLETE_ANALYSIS.md  PHASE2_FINAL_SUCCESS_REPORT.md  PHASE2_FIX_COMPLETE.md  PHASE8_10B_JAPANESE_LOSS_REVIEW.md  PILE_BENCHMARK_QUICK_REFERENCE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  READY_FOR_LATEX.md  ROADMAP.md  STATUS_REPORT.md  STEP2_PHASE1_COLAB_RESULTS.md  (+72 more)
.archive/: FINAL_COMMIT_MESSAGE.txt  KOOPMAN_FIX_INSTRUCTIONS.md  KOOPMAN_FURTHER_OPTIMIZATION.md  NOTEBOOK_FIX_SUMMARY.md  dev-notes  flops_baseline.json  temp-tests  tsp_path_optimizer_perfect.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  labeler.yml
1_BK_Language_Model_PoC/: BK-MoE_Language_Model.py
benchmarks/: .gitkeep  __init__.py  benchmark_fused_moe.py  benchmark_hyperbolic_attention.py  phase7_validation.py  phase8_hierarchical.py
checkpoint-saver/: Cargo.toml  config.toml
checkpoint-saver/src/: main.rs
configs/: base_config.yaml  colab_config.yaml  dataset_japanese.yaml  dataset_japanese_chat_optimized.yaml  dataset_mixing.yaml  efficiency_config.yaml  long_context_config.yaml  mamba_comparison_config.yaml  phase4_deep.yaml  phase4_strongest.yaml  phase7_1.5b_triton.yaml  phase7_1.5b_triton_8gb.yaml  phase7_8gb_optimized.yaml  phase7_chat_optimized.yaml  phase7_max_push.yaml  phase7_optimized.yaml  phase7_small.yaml  phase8_10b.yaml  phase8_10b_japanese.yaml  phase8_10b_rtx3080.yaml  phase8_10b_ultra.yaml  phase8_300m_japanese_chat.yaml  phase8_300m_scaling.yaml  phase8_3b_japanese.yaml  phase8_8gb_safe.yaml  phase8_max_push.yaml  phase8_max_push_300m.yaml  phase8_max_push_ultra_compressed.yaml  phase8_optimized.yaml  phase8_simple_8gb.yaml  quantization_config.yaml  resnet_bk_8gb.yaml  user_train_config.yaml
docs/: ACT_IMPLEMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARK_COMMANDS.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING.md  FAQ.md  HUGGINGFACE_INTEGRATION.md  LEARNED_SEQUENCE_LENGTH.md  MIGRATION.md  Makefile  PENN_TREEBANK_BENCHMARK.md  PHASE1_95_PERCENT_QUEST.md  PHASE1_BENCHMARKING.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_CRITICAL_FIXES.md  PHASE1_HYPERPARAMETER_TUNING.md  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE1_MIGRATION_GUIDE.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASE3_IMPLEMENTATION_GUIDE.md  PHASE7_1.5B_COMMANDS.md  PHASE7_1.5B_QUICKSTART_JP.md  PHASE8_IMPROVEMENT_IDEAS.md  PHASE8_QUICK_START.md  PHASE8_RESNETBK_INTEGRATION.md  PHASE8_TRAINING_COMMANDS_JP.md  PILE_BENCHMARK.md  RELEASE.md  REPRODUCIBILITY.md  RESEARCH_NEXT_STEPS.md  SCALING_EXPERIMENTS.md  SECURITY.md  SPARSE_BK_CORE.md  SPEED_OPTIMIZATION_GUIDE.md  (+12 more)
examples/: act_demo.py  act_scattering_demo.py  birman_schwinger_integration_demo.py  bk_triton_demo.py  clark_distillation_demo.py  clark_measure_demo.py  complex_gradient_safety_demo.py  complex_number_support_demo.py  conditional_moe_demo.py  demo_ar_ssm.py  early_exit_demo.py  early_exit_simple_demo.py  failure_recovery_demo.py  flops_counter_demo.py  fused_scan_demo.py  hf_integration_demo.py  htt_compression_demo.py  koopman_compression_demo.py  koopman_compression_integration_demo.py  learned_sequence_length_demo.py  learned_sparsity_multi_scale_demo.py  lns_kernel_demo.py  memory_optimization_demo.py  memory_resonance_demo.py  memory_selection_demo.py  mixed_precision_quantization_demo.py  mourre_lap_demo.py  multi_scale_demo.py  non_hermitian_demo.py  phase1_config_demo.py  phase1_error_recovery_demo.py  phase1_integration_demo.py  phase2_basic_usage.py  phase2_block_demo.py  phase2_diagnostics.py  phase2_factory_demo.py  phase2_inference.py  phase2_integrated_demo.py  phase2_training.py  phase2_training_demo.py  (+23 more)
experiments/: validate_fep_loss.py  validate_hyperbolic_attention.py  validate_riemannian_adam.py
notebooks/: 01_quick_start.ipynb  02_full_training.ipynb  03_benchmarking.ipynb  04_interpretability.ipynb  COLAB_FAIR_COMPARISON.md  COLAB_SETUP_GUIDE.md  COLAB_STEP7_GUIDE.md  colab_10b_feasibility_resnetbk.ipynb  colab_efficiency_resnetbk_vs_mamba.ipynb  colab_long_context_resnetbk_vs_mamba.ipynb  colab_quantization_resnetbk_vs_mamba.ipynb  hypothesis7_toy.ipynb  long_context_benchmark_colab.py  magnitude_pruning_demo.ipynb  phase1_ar_ssm_tutorial.py  phase1_full_model_tutorial.py  phase1_htt_compression_tutorial.py  phase1_prime_bump_ab.ipynb  phase1_prime_bump_complete.ipynb  phase2_scattering_router_ab.ipynb  prime_bump_init_run.ipynb  step2_phase1_colab.ipynb  step2_phase2_koopman.ipynb  step4_compression.ipynb  step5_hardware_optimizations.ipynb  step6_algorithmic_innovations.ipynb  step7_system_integration.ipynb  transformer_vs_resnetbk_colab.ipynb  transformer_vs_resnetbk_colab.py
paper/: COMPILE_INSTRUCTIONS.md  COMPLETION_STATUS.md  Makefile  NEXT_STEPS.md  PAPER_TODO.md  README.md  RESPONSE_TO_CONCERNS.md  WRITING_GUIDE.md  generated_tables.tex  main.aux  main.bbl  main.blg  main.tex  references.bib  supplementary.tex  theorem_templates.tex
results/: hyperbolic_attention_benchmark.json  speed_benchmark.txt
rust_loader/: Cargo.toml  pyproject.toml
scripts/: analyze_ds.py  analyze_training_log.py  apply_phase4_config.py  auto_scale.py  benchmark_bk_core_integration_effect.py  benchmark_bk_triton.py  benchmark_complex_matmul.py  benchmark_consumer_gpu.py  benchmark_core_innovations.py  benchmark_flash_hyperbolic.py  benchmark_fused_scan.py  benchmark_hyperbolic_triton.py  (+183 more)
(+895 files in other folders)
