[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba-killer-resnet-bk"
version = "0.9.0"
description = "Mamba-Killer: Ultra-Scale ResNet-BK with Birman-Schwinger Theory"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Teppei Arai", email = "arat252539@gmail.com"}
]
keywords = [
    "deep-learning",
    "language-model",
    "birman-schwinger",
    "quantum-scattering",
    "mamba",
    "transformer",
    "pytorch"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "triton==2.2.0; platform_system != 'Windows'",
    "ninja==1.11.1.1",
    "numpy>=1.26.0",
    "scipy>=1.11.4",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "pandas==2.1.1",
    "tqdm==4.66.1",
    "pyyaml==6.0.1",
    "tensorboard==2.15.1",
    "transformers==4.35.0",
    "datasets==2.14.6",
    "tokenizers==0.15.0",
    "accelerate==0.24.1",
    "einops==0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.3.0",
    "black==23.12.1",
    "flake8==6.1.0",
    "mypy==1.6.1",
    "isort==5.12.0",
    "pre-commit==3.5.0",
]
jupyter = [
    "jupyter==1.0.0",
    "jupyterlab==4.0.7",
    "ipywidgets==8.1.1",
]
wandb = [
    "wandb==0.16.0",
]
hub = [
    "huggingface_hub==0.16.4",
]
docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==1.3.0",
    "sphinx-autodoc-typehints==1.24.0",
    "myst-parser==2.0.0",
]
all = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.3.0",
    "black==23.12.1",
    "flake8==6.1.0",
    "mypy==1.6.1",
    "isort==5.12.0",
    "pre-commit==3.5.0",
    "jupyter==1.0.0",
    "jupyterlab==4.0.7",
    "ipywidgets==8.1.1",
    "wandb==0.16.0",
    "huggingface_hub==0.16.4",
    "sphinx==7.2.6",
    "sphinx-rtd-theme==1.3.0",
    "sphinx-autodoc-typehints==1.24.0",
    "myst-parser==2.0.0",
]

[project.urls]
Homepage = "https://github.com/neko-jpg/Project-ResNet-BK-An-O-N-Language-Model-Architecture"
Documentation = "https://resnet-bk.readthedocs.io"
Repository = "https://github.com/neko-jpg/Project-ResNet-BK-An-O-N-Language-Model-Architecture"
Issues = "https://github.com/neko-jpg/Project-ResNet-BK-An-O-N-Language-Model-Architecture/issues"
Changelog = "https://github.com/neko-jpg/Project-ResNet-BK-An-O-N-Language-Model-Architecture/blob/main/docs/CHANGELOG.md"

[project.scripts]
mamba-killer-train = "scripts.train:main"
resnet-bk-train = "scripts.train:main"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "datasets.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

# Flake8 configuration (in setup.cfg since flake8 doesn't support pyproject.toml yet)
