[metadata]
name = mamba-killer-resnet-bk
version = 0.9.0
author = Teppei Arai
author_email = arat252539@gmail.com
description = Mamba-Killer: Ultra-Scale ResNet-BK with Birman-Schwinger Theory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neko-jpg/Project-ResNet-BK-An-O-N-Language-Model-Architecture
project_urls =
    Bug Tracker = https://github.com/neko-jpg/Project-ResNet-BK-An-O-N-Language-Model-Architecture/issues
    Documentation = https://resnet-bk.readthedocs.io
    Source Code = https://github.com/neko-jpg/Project-ResNet-BK-An-O-N-Language-Model-Architecture
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    torch>=2.0.0
    numpy>=1.24.0
    scipy>=1.10.0
    matplotlib>=3.7.0
    seaborn>=0.12.0
    pandas>=2.0.0
    tqdm>=4.65.0
    pyyaml>=6.0
    tensorboard>=2.13.0
    transformers>=4.30.0
    datasets>=2.12.0
    tokenizers>=0.13.0
    accelerate>=0.20.0
    einops>=0.6.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.3.0
    pytest-cov>=4.1.0
    pytest-xdist>=3.3.0
    black>=23.3.0
    flake8>=6.0.0
    mypy>=1.3.0
    isort>=5.12.0
    pre-commit>=3.3.0
jupyter =
    jupyter>=1.0.0
    jupyterlab>=4.0.0
    ipywidgets>=8.0.0
wandb =
    wandb>=0.15.0
hub =
    huggingface_hub>=0.16.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0
    sphinx-autodoc-typehints>=1.24.0
    myst-parser>=2.0.0
all =
    %(dev)s
    %(jupyter)s
    %(wandb)s
    %(hub)s
    %(docs)s

[options.entry_points]
console_scripts =
    mamba-killer-train = scripts.train:main
    resnet-bk-train = scripts.train:main

[flake8]
max-line-length = 100
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    .tox,
    .pytest_cache,
    .mypy_cache
per-file-ignores =
    __init__.py:F401
    tests/*:F401,F811

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[mypy-torch.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

[mypy-datasets.*]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --strict-markers
    --tb=short
    --cov=src
    --cov-report=html
    --cov-report=term-missing
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    gpu: marks tests that require GPU

[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
branch = True

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[coverage:html]
directory = htmlcov

[bdist_wheel]
universal = 0

[aliases]
test = pytest
