[package]
name = "checkpoint-saver"
version = "0.1.0"
edition = "2021"
description = "Checkpoint management daemon for ML training"
authors = ["ResNet-BK Team"]

[dependencies]
# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Config parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Compression
zstd = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
glob = "0.3"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
